--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="kr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,22 +41,241 @@
         </div>
     <!-- Swiper -->
         <div class="mainCnt01">
-            <div class="cntInf">
-                <div class="cntImg">
-                    <img src="images/sbImg_01.png" >
-                </div>
-                <div class="cntTxt">
-                    <span class="tit">COVISION</span><br/>
-                    <strong>HIGH TECH</strong>
-                    <strong>MARKET LEADER</strong>
-                    <p class="sbTxt">협업 환경에 대한 놀라운 통찰력과 기술력으로 솔루션 그 이상의 <br/>가치를 담았습니다.</p>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="cntInf">
+                        <div class="cntImg">
+                            <img src="images/sbImg_01.png" >
+                        </div>
+                        <div class="cntTxt">
+                            <span class="tit">COVISION</span><br/>
+                            <strong>HIGH TECH</strong>
+                            <strong>MARKET LEADER</strong>
+                            <p class="sbTxt">협업 환경에 대한 놀라운 통찰력과 기술력으로 솔루션 그 이상의 <br/>가치를 담았습니다.</p>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="cntInf">
+                        <div class="cntImg">
+                            <img src="images/sbImg_02.png" >
+                        </div>
+                        <div class="cntTxt">
+                            <span class="tit">COVISION</span><br/>
+                            <strong>HIGH TECH</strong>
+                            <strong>MARKET LEADER</strong>
+                            <p class="sbTxt">협업 환경에 대한 놀라운 통찰력과 기술력으로 솔루션 그 이상의 <br/>가치를 담았습니다.</p>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="cntInf">
+                        <div class="cntImg">
+                            <img src="images/sbImg_03.png" >
+                        </div>
+                        <div class="cntTxt">
+                            <span class="tit">COVISION</span><br/>
+                            <strong>HIGH TECH</strong>
+                            <strong>MARKET LEADER</strong>
+                            <p class="sbTxt">협업 환경에 대한 놀라운 통찰력과 기술력으로 솔루션 그 이상의 <br/>가치를 담았습니다.</p>
+                        </div>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
-
-
+        <div id="cntSld01Prg">
+            <div>
+                <a href="javascript:;" id="cntSld01Prv"><img src="images/img_sldPrv.png" /></a>
+                <div><span></span><s></s></div>
+                <a href="javascript:;" id="cntSld01Nxt"><img src="images/img_sldNxt.png" /></a>
+                <span>
+                    <span>01</span>
+                    <span>&nbsp;&nbsp;/&nbsp;&nbsp;03</span>
+                </span>
+            </div>
+        </div>
+      </div>
     </header>
-    <!-- header 영역 -->
+    <!-- header 영역 끝 -->
+
+    <div class="cvsCnt01">
+        <div>
+            <strong>COVISION REFERENCE</strong>
+            <p>500여 대기업, 그룹사 및 중소기업의 선택에는 이유가 있습니다.</p>
+            <ul>
+                <li>
+                    <span><strong>1</strong>st</span>
+                <div>대기업 및 그룹사<br/>레퍼런스 최대</div>
+                </li>
+                <li>
+                    <span><strong>95</strong>%</span>
+                <div>솔루션 도입 후<br/>유지보수 고객</div>
+                </li>
+                <li>
+                    <span><strong>72,000</strong></span>
+                <div>지난 1년간<br/>신규 사용자 증가량</div>
+                </li>
+                <li>
+                    <span><strong>650,000 </strong></span>
+                <div>현재 코비젼<br/>사용자 수</div>
+                </li>
+            </ul>
+            <a href="javascript:;" class="viewBtn">
+                <s class="onlPsc"></s>
+                VIEW
+            </a>
+        </div>
+    </div>
+    <!-- cvsCnt01 영역 끝 -->
+
+    <div class="cvsCnt02" style="background-color: #f5f9fc;">
+        <div>
+            <div class="cntTtl">
+                <strong>COVISION BLOG</strong>
+                <span>협업 환경에 대한 <b>풍성한 정보와<br/> 최근 소식</b>을 확인하세요.</span>
+            </div>
+            <div class="vewMr">
+                <a href="javascript:;" class="vewMoreBlu"><s></s>MORE</a>
+            </div>
+        </div>
+        <div class style="position: relative;">
+            <div class="blgCtl">
+                <a href="javascript:;" class="blgSldPrv"></a>
+                <a href="javascript:;" class="blgSldNxt"></a>
+            </div>
+            <div id="blgCntSld" class="swiper-container" style="overflow:visible;">
+                <div class="swiper mySwiper-blgSld">
+                    <div class="swiper-wrapper">
+                      <div class="blgSldItm swiper-slide">
+                          <img src="images/newsimg_01.jpg" >
+                          <div>
+                              <span style="background-color: #1945cc">기능소개</span>
+                              <div>
+                                  <strong style="font-weight: 400;">그룹웨어 알아보기 Chapter.01 구축형 특장점</strong>
+                                  <p>지난 코비젼의 구축형 그룹웨어 포스팅에 이어 구축형의 특장점에 대해 알아보는 시간을 갖도록 하겠습니다.</p>
+                              </div>
+                              <a href="javascript:;" class="VewBtnBlu">2021-07-23
+                                  <s></s>
+                              </a>
+                          </div>
+                      </div>
+
+                      <div class="blgSldItm swiper-slide">
+                          <img src="images/newsimg_02.jpg" >
+                          <div>
+                            <span style="background-color: #00bfbf">협업트렌드</span>
+                            <div>
+                                <strong style="font-weight: 400;">유연근무제 대응 가능한 주52시간 근태관리</strong>
+                                <p>지난 코비젼의 구축형 그룹웨어 포스팅에 이어 구축형의 특장점에 대해 알아보는 시간을 갖도록 하겠습니다.</p>
+                            </div>
+                            <a href="javascript:;" class="VewBtnGry">2021-07-23
+                                <s></s>
+                            </a>
+                          </div>
+                      </div>
+                      <div class="blgSldItm swiper-slide">
+                        <img src="images/newsimg_03.jpg" >
+                        <div>
+                          <span style="background-color: #1945cc">기능소개</span>
+                          <div>
+                            <strong style="font-weight: 400;">기업용 메신저 일과 사랑을 잇는 이음톡 신규 출시</strong>
+                            <p>지난 코비젼의 구축형 그룹웨어 포스팅에 이어 구축형의 특장점에 대해 알아보는 시간을 갖도록 하겠습니다.</p>
+                        </div>
+                        <a href="javascript:;" class="VewBtnGry">2021-07-23
+                            <s></s>
+                        </a>
+                        </div>
+                      </div>
+                      <div class="blgSldItm swiper-slide">
+                        <img src="images/newsimg_04.jpg" >
+                        <div>
+                          <span style="background-color: #00bfbf">협업트렌드</span>
+                          <div>
+                            <strong style="font-weight: 400;">손쉬운 경비지출업무 Accounting 관리자편</strong>
+                            <p>지난 코비젼의 구축형 그룹웨어 포스팅에 이어 구축형의 특장점에 대해 알아보는 시간을 갖도록 하겠습니다.</p>
+                        </div>
+                        <a href="javascript:;" class="VewBtnGry">2021-07-23
+                            <s></s>
+                        </a>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- cvsCnt02 영역 끝 -->
+
+    <div class="cvsCnt03">
+        <div>
+            <div class="cnt03sls">
+                <div class="on">
+                    <img src="images/img_sample04.png">
+                    <span>01</span>
+                    <div>
+                        <strong>그룹웨어</strong>
+                        <p>업무 환경을 고려한 <br />맞춤형 협업 플랫폼</p>
+						<a href="javascript:;" class="viewBtn">
+                            <s class="onlPsc"></s>
+                            VIEW</a>
+                    </div>
+                    <img src="images/img_sample03_0.png" >
+                </div>
+                <div>
+                    <img src="images/img_sample04.png">
+                    <span>02</span>
+                    <div>
+                        <strong>경비결재</strong>
+                        <p>보고서 만들 필요 없이 <br />한눈에 보는 지출 현황</p>
+						<a href="javascript:;" class="viewBtn">
+                            <s class="onlPsc"></s>
+                            VIEW</a>
+                    </div>
+                    <img src="images/img_sample03_1.png" >
+                </div>
+                <div>
+                    <img src="images/img_sample04.png">
+                    <span>03</span>
+                    <div>
+                        <strong>근태관리</strong>
+                        <p>다양한 근무환경을 지원하는 <br />근태관리 솔루션</p>
+						<a href="javascript:;" class="viewBtn">
+                            <s class="onlPsc"></s>
+                            VIEW</a>
+                    </div>
+                    <img src="images/img_sample03_2.png" >
+                </div>
+                <div>
+                    <img src="images/img_sample04.png">
+                    <span>04</span>
+                    <div>
+                        <strong>협업솔루션</strong>
+                        <p>비대면 협업을 지원하는 <br />칸반스타일 협업솔루션</p>
+						<a href="javascript:;" class="viewBtn">
+                            <s class="onlPsc"></s>
+                            VIEW</a>
+                    </div>
+                    <img src="images/img_sample03_3.png" >
+                </div>
+            </div>
+
+            <div class="cnt03Chp">
+                <strong>코비젼 솔루션</strong>
+                <span>
+                    <b>협업 플랫폼의 다양한 솔루션</b>들을<br/>
+                    지금 바로 만나보십시오!
+                </span>
+                <ul>
+                    <li><a href="javascript:;" class="on"><span>01</span>그룹웨어</a></li>
+                    <li><a href="javascript:;"><span>02</span>경비결재</a></li>
+                    <li><a href="javascript:;" ><span>03</span>근태관리</a></li>
+                    <li><a href="javascript:;" ><span>04</span>협업솔루션</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
